# advent-of-code-rust

./: .gitignore  LICENSE  README.md
2015/: Cargo.toml
2015/day-01/: Cargo.toml  README.md
2015/day-01/benches/: benchmarks-criterion.rs
2015/day-01/src/: lib.rs  part1.rs  part2.rs
2015/day-02/: Cargo.toml  README.md
2015/day-02/benches/: benchmarks-criterion.rs
2015/day-02/src/: part1.rs  part2.rs
2015/day-03/: Cargo.toml  README.md
2015/day-03/src/: part1.rs  part2.rs
2015/day-04/: Cargo.toml  README.md
2015/day-04/benches/: benchmarks-criterion.rs
2015/day-04/src/: lib.rs  part1.rs  part2.rs
2015/day-05/: Cargo.toml  README.md
2015/day-05/benches/: benchmarks-criterion.rs
2015/day-05/src/: lib.rs  part1.rs  part2.rs
2015/res/: input_day_00.txt
2021/: Cargo.toml
2021/day-01/: Cargo.toml  README.md
2021/day-01/benches/: benchmarks-criterion.rs
2021/day-01/src/: part1.rs  part2.rs
2021/day-02/: Cargo.toml  README.md
2021/day-02/benches/: benchmarks-criterion.rs
2021/day-02/src/: lib.rs  part1.rs  part2.rs
2021/day-03/: Cargo.toml  README.md
2021/day-03/benches/: benchmarks-criterion.rs
2021/day-03/src/: lib.rs  part1.rs  part2.rs
2022/: Cargo.toml
2022/day-01/: Cargo.toml  README.md
2022/day-01/benches/: benchmarks-criterion.rs
2022/day-01/src/: lib.rs  part1.rs  part2.rs
2022/day-02/: Cargo.toml
2022/day-02/src/: lib.rs  part1.rs  part2.rs
2022/day-03/: Cargo.toml  README.md
2022/day-03/benches/: benchmarks-criterion.rs
2022/day-03/src/: lib.rs  part1_array.rs  part1_loop.rs  part2_array.rs  part2_loop.rs
2022/day-04/: Cargo.toml
2022/day-04/benches/: benchmarks-criterion.rs
2022/day-04/src/: lib.rs  part1.rs  part2.rs
2022/day-05/: Cargo.toml
2022/day-05/benches/: benchmarks-criterion.rs
2022/day-05/src/: lib.rs  part1.rs  part2.rs  stack.rs
2022/day-06/: Cargo.toml
2022/day-06/benches/: benchmarks-criterion.rs
2022/day-06/src/: lib.rs  part1.rs  part2.rs
2023/: Cargo.toml
2023/day-01/: Cargo.toml  README.md
2023/day-01/benches/: benchmarks-criterion.rs
2023/day-01/src/: lib.rs  part1_compact.rs  part1_fast_if.rs  part1_fast_rusty.rs  part2_fast.rs  part2_replace.rs  part2_search.rs
2023/day-02/: Cargo.toml  README.md
2023/day-02/benches/: benchmarks-criterion.rs
2023/day-02/src/: lib.rs  part1_fast.rs  part1_str.rs  part2_fast.rs  part2_str.rs
2023/day-03/: Cargo.toml  README.md
2023/day-03/benches/: benchmarks-criterion.rs
2023/day-03/src/: lib.rs  part1_fast.rs  part1_pos_compare.rs  part2.rs  part2_no_hashmap.rs  parts_kotlin_converted.rs
2023/day-04/: Cargo.toml  README.md
2023/day-04/benches/: benchmarks-criterion.rs
2023/day-04/src/: lib.rs  part1_array.rs  part1_str.rs  part1_vec.rs  part2_vec.rs
2023/day-05/: Cargo.toml  README.md
2023/day-05/benches/: benchmarks-criterion.rs
2023/day-05/src/: lib.rs  part1.rs  part2.rs
2023/day-06/: Cargo.toml  README.md
2023/day-06/benches/: benchmarks-criterion.rs
2023/day-06/src/: lib.rs  part1_loop.rs  part1_math.rs  part2_loop.rs  part2_math.rs
2023/day-07/: Cargo.toml  README.md
2023/day-07/benches/: benchmarks-criterion.rs
2023/day-07/src/: lib.rs  part1_enum.rs  part1_fast.rs  part1_parallel_sort.rs  part2_enum.rs  part2_fast.rs
2023/day-08/: Cargo.toml  README.md
2023/day-08/benches/: benchmarks-criterion.rs
2023/day-08/src/: lib.rs  part1.rs  part1_array.rs  part1_hashmap.rs  part2_v1.rs  part2_v2.rs  part2_v3_array.rs  part2_v4_array_16_bit_key.rs
2023/day-09/: Cargo.toml  README.md
2023/day-09/benches/: benchmarks-criterion.rs
2023/day-09/src/: lib.rs  part1.rs  part2.rs
2023/day-10/: Cargo.toml  README.md
2023/day-10/benches/: benchmarks-criterion.rs
2023/day-10/src/: lib.rs  part1.rs  part2.rs
2023/day-11/: Cargo.toml  README.md
2023/day-11/benches/: benchmarks-criterion.rs
2023/day-11/src/: lib.rs  part1_timvisee.rs  part1_v1.rs  part1_v2.rs  part2_v1.rs  part2_v2.rs
2024/: Cargo.toml
2024/day-01/: README.md
2024/day-01/src/: lib.rs  part1.rs  part2.rs
2024/day-02/: Cargo.toml  README.md
2024/day-02/benches/: benchmarks-criterion.rs
2024/day-02/src/: lib.rs  part1.rs  part2.rs
2024/day-03/: Cargo.toml  README.md
2024/day-03/benches/: benchmarks-criterion.rs
2024/day-03/src/: part1.rs  part2.rs
2024/day-05/: Cargo.toml  README.md
2024/day-05/benches/: benchmarks-criterion.rs
2024/day-05/src/: lib.rs  part1.rs  part2.rs  parts_both.rs
2024/day-11/: Cargo.toml  README.md
2024/day-11/benches/: benchmarks-criterion.rs
2024/day-11/src/: lib.rs  puzzle.rs
2025/: Cargo.toml
2025/day-01/: Cargo.toml  README.md
2025/day-01/benches/: benchmarks-criterion.rs
2025/day-01/src/: lib.rs  part1.rs  part2.rs
2025/day-03/: Cargo.toml  README.md
2025/day-03/benches/: benchmarks-criterion.rs
2025/day-03/src/: lib.rs  part1.rs  part2.rs
2025/day-04/: Cargo.toml  README.md
2025/day-04/benches/: benchmarks-criterion.rs
2025/day-04/src/: lib.rs  part1.rs  part2.rs
2025/day-05/: Cargo.toml  README.md
2025/day-05/benches/: benchmarks-criterion.rs
2025/day-05/src/: lib.rs  part1.rs  part2.rs
2025/day-07/: Cargo.toml  README.md
2025/day-07/benches/: benchmarks-criterion.rs
2025/day-07/src/: lib.rs  part1.rs  part2.rs
2025/res/: input_day_00.txt
aoc_file_reader/: Cargo.toml
aoc_file_reader/src/: lib.rs
