[workspace]
resolver = "2"

members = ["day-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
aoc_file_reader = { path = "../aoc_file_reader" }

dhat = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
regex = { version = "1.10.6", default-features = false }

[profile.dhat]
inherits = "release"
debug = 1

[profile.release]
debug = true
