[workspace]
resolver = "2"

members = ["day-*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
aoc_file_reader = { path = "../aoc_file_reader" }
criterion = { version = "0.6", features = ["html_reports"] }
dhat = "0.3"
# atoi = "2.0.0"
# hashbrown = "0.15.0"
# regex = { version = "1.11.1", default-features = false }
# smallvec = "1.13.2"
# 
[profile.dhat]
inherits = "release"
debug = 1
# 
# [profile.release]
# debug = true
