[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_file_reader.workspace = true
dhat.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day-04-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
