[package]
name = "day-06"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_file_reader.workspace = true
dhat.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day-06-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

# [profile.release]
# debug = 1

[features]
dhat-heap = []
