[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_file_reader.workspace = true
dhat.workspace = true
rayon = "1.10.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day-07-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
