[package]
name = "day-08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_file_reader.workspace = true
dhat.workspace = true
# nohash-hasher = "0.2.0"
# fnv = "1.0.7"
# fxhash = "0.2.1"
hashbrown.workspace = true

[dev-dependencies]
criterion.workspace = true
# criterion2 = "1.1.1"

[[bench]]
name = "day-08-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
