[package]
name = "day-11"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_file_reader.workspace = true
dhat.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "day-11-bench-criterion"
path = "benches/benchmarks-criterion.rs"
harness = false

[features]
dhat-heap = []
